service_template.yml
apiVersion: v1
kind: Service
metadata:
  name: service-template
spec:
  ports:
  - port: 80
    targetPort: 80
  selector: 
    app: app-template
  type: ClusterIP
