ingress-template.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-template
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: service-template
            port:
              number: 80
